# aidsl

./: .gitignore  AGENTS.md  CLAUDE.md  CONCEPTS.md  INFRA_DESIGN.txt  OSS_AI_Kernel_DSL_UI_RFC.md  PLAN.txt  README.md  ROADMAP.md  TASKS.md  THESES.md  lessons_learned.md  pyproject.toml  raw_prompt.py  security_wip.md
.github/: FUNDING.yml
aidsl/: __init__.py  __main__.py  api.py  compiler.py  parser.py  runtime.py
documentation/: Strategy_Sheet_Open_AI_Stack.md  ai_kernel.md  ai_kernel_spec_rfc.md  citations_custom_content_hitl_revise.md  loops.md  vision_full_feature_set.md
examples/: api_demo.ai  api_expense.py  api_from_ai_file.py  api_github.ai  api_public.ai  classified.json  contact.ai  contacts.csv  contacts.json  expense.ai  expenses_api.json  invoice.ai  parsed_invoices.json  processed_claims.json  receipts.csv  showcase.ai  tickets.csv  tickets.json  tickets_json.ai  triage.ai  triage_replies.json  triage_reply.ai
future_state/: 20260310_CoPilot_IR_Tiny_ServiceNow_Ideation.md  Christian_Community_Signal_Agent.ai  Christian_Life_Rhythm_Agent.ai  Customer_Service_OODA.ai  Home_Robot_Training.ai  SEC_Compliance_Monitoring.ai  Sales_CRM_Pipeline_Agent.ai  SmartHome_Monitoring_Agent.ai  Support_Desk_Triage_Human_Compute_Costs.ai  Support_Desk_Triage_Human_Compute_Costs.py  grok_review_transcript.md  verify_graph_grok_talk.md
tests/: conftest.py  test_api.py  test_api_source.py  test_classify.py  test_compiler.py  test_draft.py  test_examples.py  test_flags.py  test_folder_source.py  test_json_source.py  test_nested.py  test_parser.py  test_prompt.py  (+5 more)
(+15 files in other folders)
