[project]
name = "aidsl"
version = "0.1.0"
description = "AI DSL proof of concept - structured DSL beats raw prompts"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
